--- a/.github/workflows/deployDev.yml
+++ b/.github/workflows/deployDev.yml
@@ -63,6 +63,6 @@ jobs:
       id: fa
       with:
         app-name: ${{ env.AZURE_FUNCTIONAPP_NAME }}
-        slot-name: ${{ env.DEPLOYMENT_SLOT }}
+        # slot-name: ${{ env.DEPLOYMENT_SLOT }}
         package: ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
-        publish-profile: ${{ secrets.AZURE_FUNCTIONAPP_PUBLISH_PROFILE_DEV }} # Remove publish-profile to use Azure RBAC
+        publish-profile: ${{ secrets.AZURE_FUNCTIONAPP_PUBLISH_PROFILE }} # Remove publish-profile to use Azure RBAC
