--- a/.github/workflows/deployDev.yml
+++ b/.github/workflows/deployDev.yml
@@ -25,7 +25,7 @@ on:
     branches: ["dev/*"]  # only trigger on dev branches
 
 env:
-  AZURE_FUNCTIONAPP_NAME: 'azfuncplayground(dev)'   # set this to your function app name on Azure
+  AZURE_FUNCTIONAPP_NAME: 'azfuncplayground'   # set this to your function app name on Azure
   DEPLOYMENT_SLOT: 'dev'                    # set this if you have deployment slot
   AZURE_FUNCTIONAPP_PACKAGE_PATH: '.'       # set this to the path to your function app project, defaults to the repository root
   NODE_VERSION: '16.x'                      # set this to the node version to use (e.g. '8.x', '10.x', '12.x')
