--- a/.github/workflows/deployProd.yml
+++ b/.github/workflows/deployProd.yml
@@ -21,12 +21,17 @@
 name: Deploy Node.js project to Azure Function App
 
 on:
-  push:
-    branches: ["dev/*"] # only trigger on dev branches
+  # push:
+  #   branches: ["main"] # not good practice to deploy to production on every push to main, prefer to use workflow_dispatch and pro
+  workflow_dispatch:
+    inputs:
+      branches:
+        required: true
+        type: string
+        description: "Branches to build and deploy to production"
 
 env:
   AZURE_FUNCTIONAPP_NAME: "azfuncplayground" # set this to your function app name on Azure
-  DEPLOYMENT_SLOT: "dev" # set this if you have deployment slot
   AZURE_FUNCTIONAPP_PACKAGE_PATH: "." # set this to the path to your function app project, defaults to the repository root
   NODE_VERSION: "16.x" # set this to the node version to use (e.g. '8.x', '10.x', '12.x')
 
@@ -65,6 +70,5 @@ jobs:
         id: fa
         with:
           app-name: ${{ env.AZURE_FUNCTIONAPP_NAME }}
-          slot-name: ${{ env.DEPLOYMENT_SLOT }}
           package: ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
           # publish-profile: ${{ secrets.AZURE_FUNCTIONAPP_PUBLISH_PROFILE }} # Remove publish-profile to use Azure RBAC
